solved bottom nav overlap by postion fixed to sticky

--- a/src/Components/Home/Home.module.css
+++ b/src/Components/Home/Home.module.css
@@ -240,7 +240,7 @@ flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   background-color: #0f0f0e;
   width: 100%;
